# ML_UdeM_Fraud_Detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  FRONTEND_README.md  QUICK_START.md  README.md  app.py  docker-compose.yml  predict_example.py  pyproject.toml  run_monitoring.py
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: config.yaml
logs/: monitoring_report.json
mlruns/0/: meta.yaml
mlruns/165115422552987618/: meta.yaml
mlruns/165115422552987618/1b2abc144431468fa8338f508a0eda8f/: meta.yaml
mlruns/165115422552987618/4be1235fb59c49d4bac1b3c177e0988d/: meta.yaml
mlruns/165115422552987618/8377f80cae1249089c4daffc76ec81ea/: meta.yaml
mlruns/165115422552987618/a221d91528d44a3a8ab0aa374637ec73/: meta.yaml
mlruns/550687090619340603/: meta.yaml
mlruns/550687090619340603/0d19872aac7944c3b385a5f4d0400e38/: meta.yaml
mlruns/550687090619340603/24d1fa3fec0342ec936ab37436b79233/: meta.yaml
mlruns/models/FraudDetectionModel/: meta.yaml
models/: best_model.pkl  scaler.pkl
monitoring_reports/: classification_20260418_014637.html  classification_20260418_014743.html  classification_20260418_014853.html  classification_20260418_014958.html  latest_metrics.json  metrics_20260418_014637.json  metrics_20260418_014743.json  metrics_20260418_014853.json
notebooks/: 01_eda.ipynb
src/api/: main.py
src/data/: preprocessing.py
src/models/: hpo.py  pipeline.py  train.py
src/monitoring/: evidently_monitor.py  monitor.py  prometheus.yml
tests/unit/: test_api.py  test_hpo.py  test_monitoring.py  test_preprocessing.py
(+352 files in other folders)
