[project]
name = "fraud-mlops"
version = "0.1.0"
description = "Credit Card Fraud Detection - MLOps End-to-End Project"
authors = [{name = "Jhon", email = "jhon@isaintercolombia.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "mlflow>=2.9",
    "prefect>=2.14",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.4",
    "imbalanced-learn>=0.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
    "python-dotenv>=1.0",
    "optuna>=4.0",
    "evidently>=0.7",
    "prometheus-client>=0.19",
    "optuna-integration[mlflow]>=4.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "black>=23.9",
    "flake8>=6.1",
    "pre-commit>=3.5",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
